--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
   padding: 60px 0 0 0;
 }
 
+img {
+  width: 100%;
+}
+
 /* Titles */
 
 h1, h2, h3, h4, h5, h6 {
@@ -901,9 +905,9 @@ ul.work {
   max-width: 300px;
   margin: auto;
   list-style-type: circle;
-  padding: 24px 0 40px 0 ;
+  padding: 24px 0 40px 0;
 }
 
-.bottom-work{
+.bottom-work {
   padding-bottom: 40px;
 }
