--- a/css/style.css
+++ b/css/style.css
@@ -911,3 +911,9 @@ ul.work {
 .bottom-work {
   padding-bottom: 40px;
 }
+
+@media (min-width: 992px) {
+  img.responsive{
+    width: 350px;
+  }
+}
